[metadata]
name = ticklish_ui
version = 0.1.3
author = Jason DeLaat
author_email = jason.develops@gmail.com
description = A thin-ish wrapper around tkinter for specifying GUIs declaratively.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = GUI, tkinter, declarative, wrapper
license = BSD 3-Clause License
url = https://github.com/jasondelaat/ticklish_ui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets

[options]
packages = find:
python_requires = >=3.6